test dcd modules

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <base href="/designer/">
+  <base href="/">
   <!--<base href="/">-->
   <!--<base href="/designer/">-->
   <meta charset="utf-8">
